Bug 461158 - Wrong message when a user is banned
Summary: Wrong message when a user is banned
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-29 13:30 UTC by Nicolas Fella
Modified: 2022-10-31 14:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (12.53 KB, image/png)
2022-10-29 13:31 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-10-29 13:30:24 UTC
When user A is banned by user B then there is a message "A banned A from the room", but it should be "B banned A from the room". See screenshot

Neochat master
Comment 1 Nicolas Fella 2022-10-29 13:31:39 UTC
Created attachment 153294 [details]
Screenshot
Comment 2 Tobias Fella 2022-10-31 14:57:36 UTC
Git commit 08300b994cd2b4967dfef258f7e24f48a7d0ee17 by Tobias Fella.
Committed on 31/10/2022 at 14:45.
Pushed by tfella into branch 'master'.

Don't show banned user as sender for state events

M  +2    -2    src/messageeventmodel.cpp

https://invent.kde.org/network/neochat/commit/08300b994cd2b4967dfef258f7e24f48a7d0ee17