Don't show banned user as sender for state events

BUG: 461158